--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==0.73.1
-lasio==0.24.1
-missingno==0.4.2
-pandas==0.25.3
-plotly==4.14.1
+streamlit
+lasio
+missingno
+pandas
+cython
+plotly
